página de login implementada

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                 </li>
             </ul>
 
+            <button class="btn-default" onclick="window.location.href='form.html'">
+                <span class="material-symbols-outlined">account_circle</span> Log-in
+            </button>
+
             <button class="btn-default" onclick="window.location.href='pontos_re.html'">
                 <span class="material-symbols-outlined">account_circle</span> Pontos de Coleta
             </button>
