ajustes no login

--- a/form.html
+++ b/form.html
@@ -10,13 +10,13 @@
   <script src="https://unpkg.com/scrollreveal"></script>
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css">
-  <title>Log-in | Go!Recycle</title>
+  <title>Login | Go!Recycle</title>
 </head>
 <body>
  
   <header>
     <nav id="navbar" class="navbar-gorecycle">
-      <a href="index.html"><i class="fa-solid-snake fa-recycle" id="nav_logo"> Go!Recycle</i></a>    <!--logo-->
+      <a href="index.html"><i class="fa-solid fa-recycle" id="nav_logo"> Go!Recycle</i></a>    <!--logo-->
     </nav>
   </header>
 
@@ -50,8 +50,8 @@
             <br><br>
         </div>
       </div>
-      <div class="info-panel">
-        <img src="" alt="">
+      <div class="image-panel">
+        <img src="images/happy.png" alt="happy_recycle">
       </div>
     </div>
   </div>
@@ -59,3 +59,4 @@
 
 </body>
 </html>
+''
