página de cadastro adicionada com sucesso

--- a/form.html
+++ b/form.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,51 +13,54 @@
   <link rel="stylesheet" href="styles.css">
   <title>Login | Go!Recycle</title>
 </head>
+
 <body>
- 
+
   <header>
     <nav id="navbar" class="navbar-gorecycle">
-      <a href="index.html"><i class="fa-solid fa-recycle" id="nav_logo"> Go!Recycle</i></a>    <!--logo-->
+      <a href="index.html"><i class="fa-solid fa-recycle" id="nav_logo"> Go!Recycle</i></a> <!--logo-->
     </nav>
   </header>
 
   <!-- Janela -->
-<main>
-  <div class="content">
-    <div class="window">
-      <div class="login-container">
-        <div id="login-logo-div">
-            <br><br>
-            <h1 id="login-logo">LOGIN</h1>
-            <br>
-        </div>
-        <div id="email-login">
-            <br>
-            <label id="login-email" for="email" place>Email:</label> <br>
-            <input type="email" size="50" width="100">
-            <br><br>
-        </div>
-        <div id="senha-login">
-            <br><br>
-            <label id="login-senha" for="senha">Senha:</label> <br>
-            <input type="senha" size="40" width="75">
-            <br><br>
-        </div>
-        <div id="buttons-login-cad">
-            <br>
-            <button id="login-button">ENTRAR</button>
-            <br><br>
-            <button id="cad-button">CADASTRAR</button>
-            <br><br>
+  <main>
+    <form action="" class="cadform">
+      <div class="content">
+        <div class="window">
+          <div class="login-container">
+            <div id="login-logo-div">
+              <br><br>
+              <h1 id="login-logo">LOGIN</h1>
+              <br>
+            </div>
+            <div id="email-login">
+              <br>
+              <label id="login-email" for="email" place>Email:</label> <br>
+              <input type="email" size="40" width="100">
+              <br><br>
+            </div>
+            <div id="senha-login">
+              <br><br>
+              <label id="login-senha" for="senha">Senha:</label> <br>
+              <input type="senha" size="40" width="75">
+              <br><br>
+            </div>
+            <div id="buttons-login-cad">
+              <br>
+              <button id="login-button" type="submit">ENTRAR</button>
+              <br><br>
+              <a href="../navcode/cadform.html" id="cad-button">CADASTRAR</a>
+              <br><br>
+            </div>
+          </div>
+          <div class="image-panel">
+            <img src="images/happy.png" alt="happy_recycle">
+          </div>
         </div>
       </div>
-      <div class="image-panel">
-        <img src="images/happy.png" alt="happy_recycle">
-      </div>
-    </div>
-  </div>
-</main>
+    </form>
+  </main>
 
 </body>
+
 </html>
-''
