--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </ul>
 
             <button class="btn-default">
-                <span class="material-symbols-outlined">account_circle</span> Login
+                <a href="form.html"><span class="material-symbols-outlined">account_circle</span> Login</a>
             </button>
         </div>
     </header>
