--- a/form.html
+++ b/form.html
@@ -24,7 +24,7 @@
 
   <!-- Janela -->
   <main>
-    <form action="" class="cadform">
+    <form action="login.php" method="post" class="cadform">
       <div class="content">
         <div class="window">
           <div class="login-container">
