--- a/cadform.html
+++ b/cadform.html
@@ -11,12 +11,14 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles_cad.css">
     <title>Cadastrar-se | GoRecycle!</title>
 </head>
 
 <body id="cadbody">
+
     <header>
-        <nav id="navbar" class="navbar-gorecycle">
+        <nav id="navbar-cad" class="navbar-gorecycle">
             <a href="index.html"><i class="fa-solid fa-recycle" id="nav_logo"> Go!Recycle</i></a> <!--logo-->
         </nav>
     </header>
@@ -55,6 +57,11 @@
             </div>
         </form>
     </main>
+
+    <footer>
+        <nav>
+        </nav>
+    </footer>
 </body>
 
 </html>
