--- a/form.html
+++ b/form.html
@@ -30,7 +30,7 @@
           <div class="login-container">
             <div id="login-logo-div">
               <br><br>
-              <h1 id="login-logo">LOGIN</h1>
+              <h1 id="login-logo">ENTRAR</h1>
               <br>
             </div>
             <div id="email-login">
@@ -47,7 +47,7 @@
             </div>
             <div id="buttons-login-cad">
               <br>
-              <button id="login-button" type="submit">ENTRAR</button>
+              <button id="login-button" type="submit">LOG-IN</button>
               <br><br>
               <a href="../navcode/cadform.html" id="cad-button">CADASTRAR</a>
               <br><br>
