--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             </div>
 
             <div id="outros_img">
-                <video src="../navcode/video/video.mp4" autoplay controls></video>
+                <video src="../navcode/video/video.mp4" controls></video>
             </div>
 
         </section><br>
