mudanças de qol

--- a/index.html
+++ b/index.html
@@ -76,10 +76,17 @@
                     <a href="#Outros">Outros</a>
                 </li>
             </ul>
-
             <button class="btn-default">
                 <a href="form.html"><span class="material-symbols-outlined">account_circle</span> Login</a>
-            </button>
+            </button> <br>
+
+            <button class="btn-default" onclick="window.location.href='cadform.html'">
+                <span class="material-symbols-outlined">emoji_people</span> Cadastrar
+            </button> <br>
+
+            <button class="btn-default" onclick="window.location.href='pontos_re.html'">
+                <span class="material-symbols-outlined">cached</span> Pontos de Coleta
+            </button> <br>
         </div>
     </header>
 
