--- a/cadform.html
+++ b/cadform.html
@@ -23,8 +23,8 @@
         </nav>
     </header>
 
-    <main>
-        <form action="script.php" method="post">
+    <main>            <!-- Mudar o action para script.php quando o arquivo estiver pronto para receber cadastros -->
+        <form action="index.html" method="post">
             <div class="content">
                 <div class="window">
                     <div class="login-container">
