--- a/form.html
+++ b/form.html
@@ -22,9 +22,9 @@
     </nav>
   </header>
 
-  <!-- Janela -->
+  <!-- Janela -->   <!-- Mudar o action para login.php quando o arquivo estiver pronto para receber logins -->
   <main>
-    <form action="login.php" method="post" class="cadform">
+    <form action="index.html" method="post" class="cadform">
       <div class="content">
         <div class="window">
           <div class="login-container">
