--- a/page_party.html
+++ b/page_party.html
@@ -7,6 +7,7 @@
     <meta name=”author” content=”Pedro Paulo”>
     <meta property=”og:description” content=”Parte do site que apresenta todos os alunos responsáveis por sua criação”>
     <title>Participantes | Go!Recycle</title>
+    <link rel="icon" type="image/png" href="../navcode/images/icon.png">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Anton&family=Lilita+One&display=swap');
       </style>
