--- a/cadform.html
+++ b/cadform.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="styles_cad.css">
+    <link rel="icon" type="image/png" href="../navcode/images/icon.png">
     <title>Cadastrar-se | GoRecycle!</title>
 </head>
 
