--- a/form.html
+++ b/form.html
@@ -11,6 +11,7 @@
   <script src="https://unpkg.com/scrollreveal"></script>
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" href="../navcode/images/icon.png">
   <title>Login | Go!Recycle</title>
 </head>
 
