--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="../navcode/images/icon.png">
     <title>Pagina inicial | Go!Recycle</title>
 </head>
 
@@ -20,7 +21,7 @@
 
             <ul id="nav_list">
                 <li class="nav-item active">
-                    <a href="#home">Inicio</a>
+                    <a href="#Intro">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a href="#Ambiental">Ambiental</a>
@@ -271,7 +272,7 @@
                 <button class="nav-button prev" onclick="moveSlide(-1)">◀</button>
                 <button class="nav-button next" onclick="moveSlide(1)">▶</button>
             </div>
-        </section> <br><br>
+        </section> <br><br><br><br><br>
 
         <!--PAUSE BREAK-->
 
