--- a/pontos_re.html
+++ b/pontos_re.html
@@ -10,6 +10,7 @@
   <script src="https://unpkg.com/scrollreveal"></script>
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" href="../navcode/images/icon.png">
   <title>Descarte Eletrônico em Alfenas | Go!Recycle</title>
 </head>
 <body>
