--- a/referencias.html
+++ b/referencias.html
@@ -10,16 +10,32 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="styles_refe.css">
+    <link rel="icon" type="image/png" href="../navcode/images/icon.png">
     <title>Referências | Go!Recycle</title>
 </head>
 <body>
     <header>
         <nav id="navbar">
-            <i class="fa-solid fa-recycle" id="nav_logo"> Go!Recycle</i>    <!--logo--> 
+            <a href="index.html"><i class="fa-solid fa-recycle" id="nav_logo"> Go!Recycle</i></a> <!--logo--> 
 
-            <button class="btn-default" onclick="window.location.href='pontos_re.html'">
-                <span class="material-symbols-outlined">account_circle</span> Pontos de Coleta
-            </button>
+            <div id="button-div">
+                <button class="btn-default" onclick="window.location.href='form.html'">
+                    <span class="material-symbols-outlined">account_circle</span> Entrar
+                </button>
+
+                <button class="btn-default" onclick="window.location.href='cadform.html'">
+                    <span class="material-symbols-outlined">emoji_people</span> Cadastrar
+                </button>
+
+                <button class="btn-default" onclick="window.location.href='pontos_re.html'">
+                    <span class="material-symbols-outlined">cached</span> Pontos de Coleta
+                </button>
+
+                <button id="mobile_btn">
+                    <i class="fa-solid fa-bars"></i> <!--botão-nav-->
+                </button>
+
+            </div>
 
             <button id="mobile_btn">
                 <i class="fa-solid fa-bars"></i>    <!--botão-nav--> 
@@ -34,16 +50,21 @@
     </header>
 
     <main>
-        <section>
+        <br><br><br><br>
+        <section id="referencia">
             <div>
                 <h1>-> Referências <-</h1><br>
             </div>
             <div class="texto_bl">
                 <h3>- Leis:</h3>
-                <p>BRASIL. Lei nº 12.305, de 2 de agosto de 2010. Institui a Política Nacional de Resíduos Sólidos e dá outras providências. Diário Oficial da União, Brasília, DF, 2010.</p><br><br>
+                <p>BRASIL. Lei nº <b>12.305</b>, de 2 de agosto de 2010: <br>
+                 <b>-></b> Institui a Política Nacional de Resíduos Sólidos e dá outras providências. <br>
+                 <b>-></b> Diário Oficial da União, Brasília, DF, 2010.</p><br><br>
 
                 <h3>- Resolução:</h3>
-                <p>BRASIL. Resolução CONAMA nº 401, de 4 de novembro de 2008. Estabelece critérios para o manejo de resíduos sólidos e dá outras providências. Diário Oficial da União, Brasília, DF, 2008.</p><br><br>
+                <p>BRASIL. Resolução <b>CONAMA nº 401</b>, de 4 de novembro de 2008: <br>
+                 <b>-></b> Estabelece critérios para o manejo de resíduos sólidos e dá outras providências. <br>
+                 <b>-></b> Diário Oficial da União, Brasília, DF, 2008.</p><br><br>
             </div>
         </section>
     </main>
