--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <ul id="nav_list">
                 <li class="nav-item active">
-                    <a href="#Intro">Inicio</a>
+                    <a href="#home">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a href="#Ambiental">Ambiental</a>
@@ -130,7 +130,9 @@
                         resíduos no Brasil.</p>
                 </div>
             </div>
-
+            <div id="intro_image">
+                <img src="../navcode/images/lixo_eletronico.jpg" alt="lixo"> 
+            </div>
         </section>
 
         <!--PAUSE BREAK-->
@@ -236,7 +238,7 @@
                     <img src="../navcode/images/ChatGPT Image 16 de abr. de 2025, 02_22_48.png" alt="aaaa">
                 </div>
             </div>
-        </section>
+        </section> 
 
         <!--PAUSE BREAK-->
 
@@ -271,7 +273,7 @@
                 <button class="nav-button prev" onclick="moveSlide(-1)">◀</button>
                 <button class="nav-button next" onclick="moveSlide(1)">▶</button>
             </div>
-        </section> <br><br><br><br><br>
+        </section> <br><br>
 
         <!--PAUSE BREAK-->
 
