--- a/index.html
+++ b/index.html
@@ -20,14 +20,11 @@
             <i class="fa-solid fa-recycle" id="nav_logo"> Go!Recycle</i> <!--logo-->
 
             <ul id="nav_list">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a href="#home">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#Ambiental">Ambiental</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#Social">Social</a>
+                    <a href="#Impactos">Ambiental e Social</a>
                 </li>
                 <li class="nav-item">
                     <a href="#Lixo_Eletrônico">Lixo eletrônico</a>
@@ -55,7 +52,6 @@
                 </button>
 
             </div>
-
         </nav>
 
         <div id="mobile_menu">
@@ -131,19 +127,19 @@
                 </div>
             </div>
             <div id="intro_image">
-                <img src="../navcode/images/lixo_eletronico.jpg" alt="lixo"> 
+                <img src="../navcode/images/lixo_eletronico.jpg" alt="lixo">
             </div>
-        </section>
+        </section> <br>
 
         <!--PAUSE BREAK-->
 
-        <section class="Impactos" id="Ambiental">
+        <section class="Impactos" id="Impactos">
             <div id="impacts">
                 <div class="nice_title">
                     <h1>Impactos do Lixo Eletrônico</h1>
                 </div> <br>
 
-                <div class="impacts_amb_itens">
+                <div class="impacts_amb_itens" id="Ambiental">
                     <h2 class="amb_title">- Impactos no Ambiente -</h2><br>
 
                     <h3>Contaminação do Solo:</h3>
@@ -226,19 +222,19 @@
             </div>
 
             <div class="div_footage">
-                <div class="img_02">
+                <div class="mother_img" id="img_02">
                     <img src="../navcode/images/ChatGPT Image 16 de abr. de 2025, 00_11_28.png" alt="aaaa">
                 </div> <br><br><br><br>
 
-                <div class="img_03">
+                <div class="mother_img" id="img_03">
                     <img src="../navcode/images/OIP.jpg" alt="CO2">
                 </div> <br><br><br><br><br><br><br><br><br><br>
 
-                <div id="img_social">
+                <div class="mother_img" id="img_social">
                     <img src="../navcode/images/ChatGPT Image 16 de abr. de 2025, 02_22_48.png" alt="aaaa">
                 </div>
             </div>
-        </section> 
+        </section> <br>
 
         <!--PAUSE BREAK-->
 
@@ -258,8 +254,8 @@
                     <li>Placas-mãe, Circuitos e outros Componentes Eletrônicos</li>
                 </div>
             </div>
-            
-            <div class="carousel-container"> <!--Código do carrossel de imagens-->
+
+            <div class="carousel-container"> <!--Código do carrossel-->
                 <div class="carousel-track" id="carouselTrack">
                     <div class="slide" style="background-image: url('slidesimages/cel.jpg');"></div>
                     <div class="slide" style="background-image: url('slidesimages/pc.jpg');"></div>
@@ -313,24 +309,24 @@
     </main>
 
     <!--PAUSE BREAK-->
+    <section id="footer">
+        <footer class="home_footer">
+            <div id="footer-links">
+                <a target="_blank" href="page_party.html">Alunos</a>
+                <a target="_blank" href="https://www.unifenas.br/">Unifenas</a>
+                <a target="_blank" href="referencias.html">Referências</a>
+            </div>
 
-    <footer class="home_footer">
-        <div id="footer-links">
-            <a target="_blank" href="page_party.html">Alunos</a>
-            <a target="_blank" href="https://www.unifenas.br/">Unifenas</a>
-            <a target="_blank" href="referencias.html">Referências</a>
-        </div>
+            <div id="social-icons">
+                <a target="_blank" href="https://www.ecycle.com.br/reciclagem-de-eletronicos/"><span
+                        class="material-symbols-outlined">recycling</span></a>
+            </div>
 
-        <div id="social-icons">
-            <a target="_blank" href="https://www.ecycle.com.br/reciclagem-de-eletronicos/"><span
-                    class="material-symbols-outlined">recycling</span></a>
-        </div>
-
-        <div id="footer-copyright">
-            <p>© 2025 <a href="#top">Go!Recicle</a>. Todos os direitos reservados.</p>
-        </div>
-
-    </footer>
+            <div id="footer-copyright">
+                <p>© 2025 <a href="#top">Go!Recicle</a>. Todos os direitos reservados.</p>
+            </div>
+        </footer>
+    </section>
 
     <script src="javascript/script.js"></script>
     <script src="javascript/slidescript.js"></script>
