--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
     </header>
 
-    <!--PAUSE BREAK-->
+    <!--PAUSE BREAK opa-->
 
     <main id="content">
         <section id="home">
