--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
         <section class="Impactos" id="Impactos">
             <div id="impacts">
-                <div class="nice_title" id="nice_title">
+                <div class="nice_title">
                     <h1>Impactos do Lixo Eletrônico</h1>
                 </div> <br>
 
