--- a/pontos_re.html
+++ b/pontos_re.html
@@ -29,7 +29,7 @@
 
   <!-- Janela -->
   <main>
-    <div class="content">
+    <div class="content" id="content-map">
       <div class="window">
         <div class="map-container">
           <!-- Aparece o mapa aqui -->
