--- a/index.html
+++ b/index.html
@@ -142,24 +142,34 @@
                 <div class="impacts_amb_itens" id="Ambiental">
                     <h2 class="amb_title">- Impactos no Ambiente -</h2><br>
 
-                    <h3>Contaminação do Solo:</h3>
+                    <h3><span class="span_text" id="span_h3">Contaminação do Solo:</span></h3>
 
-                    <li><span class="span_text">Mercúrio:</span> Usado em telas de LCD e outros componentes, o mercúrio
-                        é altamente tóxico e pode contaminar o solo, além de ser muito difícil de remover.</li>
-                    <li><span class="span_text">Chumbo:</span> Encontrado em soldas de placas de circuito e outros
-                        componentes, o chumbo é um material extremamente tóxico que, se entrar em contato com o solo,
-                        pode afetar plantas, animais e até humanos.</li>
-                    <li><span class="span_text">Cádmio:</span> Usado em baterias, o cádmio é outro metal pesado que pode
-                        se infiltrar no solo e afetar a biodiversidade.</li><br>
+                    <li><span class="span_text">Mercúrio:</span> <span class="span_detail">Usado em telas de LCD e
+                            outros componentes, o mercúrio
+                            é altamente tóxico e pode contaminar o solo, além de ser muito difícil de remover.</span>
+                    </li>
+                    <li><span class="span_text">Chumbo:</span> <span class="span_detail">Encontrado em soldas de placas
+                            de circuito e outros
+                            componentes, o chumbo é um material extremamente tóxico que, se entrar em contato com o
+                            solo,
+                            pode afetar plantas, animais e até humanos.</span></li>
+                    <li><span class="span_text">Cádmio:</span> <span class="span_detail">Usado em baterias, o cádmio é
+                            outro metal pesado que pode
+                            se infiltrar no solo e afetar a biodiversidade.</span></li><br>
 
-                    <h3> Contaminação da Água:</h3>
+                    <h3 id="span_h3"> Contaminação da Água:</h3>
 
-                    <li><span class="span_text">Ecossistemas aquáticos: </span> Animais marinhos e organismos aquáticos
-                        podem ser envenenados por essas toxinas, prejudicando a biodiversidade e afetando a cadeia
-                        alimentar.</li>
-                    <li><span class="span_text">Água Potável:</span> A contaminação da água pode ter efeitos diretos
-                        sobre as populações humanas que dependem de fontes de água contaminadas, aumentando os riscos de
-                        doenças.</li> <br>
+                    <li><span class="span_text">Ecossistemas aquáticos: </span> <span class="span_detail">
+                            Animais marinhos e organismos aquáticos
+                            podem ser envenenados por essas toxinas, prejudicando a biodiversidade e afetando a cadeia
+                            alimentar.
+                        </span></li>
+                    <li><span class="span_text">Água Potável:</span> <span class="span_detail">
+                            A contaminação da água pode ter efeitos diretos
+                            sobre as populações humanas que dependem de fontes de água contaminadas, aumentando os
+                            riscos de
+                            doenças.
+                        </span></li> <br>
 
                     <div id="bleh">
                         <p class="impacts_amb_alt-itens">- Há a <strong>emissão de gases tóxicos</strong>, como o
@@ -188,19 +198,29 @@
                 <div class="impacts_amb_itens" id="Social">
                     <h2 class="amb_title">- Impactos Sociais -</h2><br>
 
-                    <h3>Problemas na Saúde Pública:</h3>
+                    <h3 id="span_h3">Problemas na Saúde Pública:</h3>
 
-                    <li><span class="span_text">Doenças respiratórias: </span>A inalação de vapores tóxicos gerados pela
-                        queima de eletrônicos pode prejudicar os pulmões.</li>
-                    <li><span class="span_text">Intoxicação e câncer: </span>A exposição contínua a metais pesados pode
-                        causar intoxicações agudas e doenças crônicas, incluindo câncer.</li>
-                    <li><span class="span_text">Distúrbios no sistema nervoso:</span> O mercúrio e o chumbo, por
-                        exemplo, são neurotóxicos e podem afetar o cérebro, causando problemas de desenvolvimento em
-                        crianças e distúrbios neurológicos em adultos.</li>
-                    <li><span class="span_text">Contaminação da água e do solo:</span> Substâncias tóxicas que
-                        contaminam o solo e a água podem afetar diretamente as populações que dependem desses recursos
-                        para consumo, além de prejudicar a segurança alimentar, caso as plantações e os animais também
-                        sejam contaminados.</li><br>
+                    <li><span class="span_text">Doenças respiratórias: </span> <span class="span_detail">
+                            A inalação de vapores tóxicos gerados pela
+                            queima de eletrônicos pode prejudicar os pulmões.
+                        </span></li>
+                    <li><span class="span_text">Intoxicação e câncer: </span> <span class="span_detail">
+                            A exposição contínua a metais pesados pode
+                            causar intoxicações agudas e doenças crônicas, incluindo câncer.
+                        </span></li>
+                    <li><span class="span_text">Distúrbios no sistema nervoso:</span> <span class="span_detail">
+                            O mercúrio e o chumbo, por
+                            exemplo, são neurotóxicos e podem afetar o cérebro, causando problemas de desenvolvimento em
+                            crianças e distúrbios neurológicos em adultos.
+                        </span></li>
+                    <li><span class="span_text">Contaminação da água e do solo:</span> <span class="span_detail">
+                            Substâncias tóxicas que
+                            contaminam o solo e a água podem afetar diretamente as populações que dependem desses
+                            recursos
+                            para consumo, além de prejudicar a segurança alimentar, caso as plantações e os animais
+                            também
+                            sejam contaminados.
+                        </span></li><br>
 
                     <div id="bleh">
                         <p class="impacts_amb_alt-itens">- Em algumas regiões, principalmente em <span
@@ -244,15 +264,15 @@
                     <h1> Classificação do Lixo Eletrônico</h1>
                 </div><br>
 
-                <div class="impacts_amb_itens">
-                    <li>Celulares e Smartphones</li>
-                    <li>Computadores e Notebooks</li>
-                    <li>Baterias e Carregadores</li>
-                    <li>Televisores e Monitores</li>
-                    <li>Impressoras e Scanners</li>
-                    <li>Equipamento de Áudio e Vídeo</li>
-                    <li>Placas-mãe, Circuitos e outros Componentes Eletrônicos</li>
-                </div>
+                <div class="impacts_amb_itens"> <span class="span_detail">
+                        <li>Celulares e Smartphones</li>
+                        <li>Computadores e Notebooks</li>
+                        <li>Baterias e Carregadores</li>
+                        <li>Televisores e Monitores</li>
+                        <li>Impressoras e Scanners</li>
+                        <li>Equipamento de Áudio e Vídeo</li>
+                        <li>Placas-mãe, Circuitos e outros Componentes Eletrônicos</li>
+                    </span></div>
             </div>
 
             <div class="carousel-container"> <!--Código do carrossel-->
@@ -281,22 +301,24 @@
 
                 <div class="impacts_amb_itens">
                     <ul>-> <span class="span_text">Lei 12.305/2010:</span></ul>
-                    <li>Estabelece a Política Nacional de Resíduos Sólidos (PNRS) Inclui o lixo eletrônico no texto da
-                        PNRS, de 1998;</li>
-                    <li>Estabelece uma responsabilidade compartilhada pelo ciclo de vida do produto.</li><br>
+                    <li><span class="span_detail">
+                            Estabelece a Política Nacional de Resíduos Sólidos (PNRS) Inclui o lixo eletrônico no texto da PNRS, de 1998;
+                        </span></li>
+                    <li><span class="span_detail">Estabelece uma responsabilidade compartilhada pelo ciclo de vida do
+                            produto.</span></li><br>
 
                     <ul>-> <span class="span_text">Resolução Conama 452/2012:</span></ul>
-                    <li>Estabelece critérios e procedimentos para o descarte de pilhas e baterias, incluindo aquelas
-                        presentes em dispositivos eletrônicos.</li><br>
+                    <li><span class="span_detail">Estabelece critérios e procedimentos para o descarte de pilhas e baterias, incluindo aquelas
+                        presentes em dispositivos eletrônicos.</span></li><br>
 
                     <ul>-> <span class="span_text">Decreto nº 10.240/2020:</span></ul>
-                    <li>Trata da logística reversa de produtos eletroeletrônicos.</li><br>
+                    <li><span class="span_detail">Trata da logística reversa de produtos eletroeletrônicos.</span></li><br>
 
                     <ul>-> <span class="span_text">Decreto nº 10.936/2022:</span></ul>
-                    <li>Regulamentou a Lei nº 12.305/2010.</li><br>
+                    <li><span class="span_detail">Regulamentou a Lei nº 12.305/2010.</span></li><br>
 
                     <ul>-> <span class="span_text">Decreto nº 11.043/2022:</span></ul>
-                    <li>Estabelece o Plano Nacional de Resíduos Sólidos.</li><br>
+                    <li><span class="span_detail">Estabelece o Plano Nacional de Resíduos Sólidos.</span></li><br>
                 </div>
             </div>
 
