--- a/index.html
+++ b/index.html
@@ -334,9 +334,9 @@
     <section id="footer">
         <footer class="home_footer">
             <div id="footer-links">
-                <a target="_blank" href="page_party.html">Alunos</a>
-                <a target="_blank" href="https://www.unifenas.br/">Unifenas</a>
-                <a target="_blank" href="referencias.html">Referências</a>
+                <a target="_blank" href="page_party.html" id="alunos">Alunos</a>
+                <a target="_blank" href="https://www.unifenas.br/" id="unifenas">Unifenas</a>
+                <a target="_blank" href="referencias.html" id="referencias11">Referências</a>
             </div>
 
             <div id="social-icons">
