--- a/referencias.html
+++ b/referencias.html
@@ -71,9 +71,9 @@
 
     <footer class="home_footer">
         <div id="footer-links">
-            <a target="_blank" href="page_party.html">Alunos</a>
-            <a target="_blank" href ="https://www.unifenas.br/">Unifenas</a>
-            <a target="_blank" href="index.html">Página Inicial</a>
+            <a target="_blank" href="page_party.html" id="alunos">Alunos</a>
+            <a target="_blank" href ="https://www.unifenas.br/" id="unifenas">Unifenas</a>
+            <a target="_blank" href="index.html" id="alunos">Página Inicial</a>
         </div>
 
         <div id="social-icons">
