--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                     <span>lixo eletrônico</span>
                 </h1>
 
-                <p class="description">
-                    One of the most challenging issues in the contemporary global scenario
+                <p class="description" id="translate">
+                    One of the most challenging issues in the contemporary global scenario. <button id="btn-translate" onclick="translatePortuguese()"><span class="material-symbols-outlined">translate</span></button> 
                 </p>
             </div>
 
@@ -272,7 +272,8 @@
                         <li>Impressoras e Scanners</li>
                         <li>Equipamento de Áudio e Vídeo</li>
                         <li>Placas-mãe, Circuitos e outros Componentes Eletrônicos</li>
-                    </span></div>
+                    </span>
+                </div>
             </div>
 
             <div class="carousel-container"> <!--Código do carrossel-->
@@ -286,8 +287,8 @@
                     <div class="slide" style="background-image: url('slidesimages/comp.jpg');"></div>
                 </div>
 
-                <button class="nav-button prev" onclick="moveSlide(-1)">◀</button>
-                <button class="nav-button next" onclick="moveSlide(1)">▶</button>
+                <button class="nav-button prev" onclick="moveSlide(-1)">←</button>
+                <button class="nav-button next" onclick="moveSlide(1)">→</button>
             </div>
         </section> <br><br>
 
@@ -350,6 +351,7 @@
         </footer>
     </section>
 
+    <script src="javascript/translatescript.js"></script>
     <script src="javascript/script.js"></script>
     <script src="javascript/slidescript.js"></script>
 </body>
