--- a/referencias.html
+++ b/referencias.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav id="navbar">
-            <a href="index.html"><i class="fa-solid fa-recycle" id="nav_logo"> Go!Recycle</i></a> <!--logo--> 
+            <a href="index.html" id="xnav-logo"><i class="fa-solid fa-recycle" id="nav_logo"> Go!Recycle</i></a> <!--logo--> 
 
             <div id="button-div">
                 <button class="btn-default" onclick="window.location.href='form.html'">
