--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </h1>
 
                 <p class="description" id="translate">
-                    One of the most challenging issues in the contemporary global scenario. <button id="btn-translate" onclick="translatePortuguese()"><span class="material-symbols-outlined">translate</span></button> 
+                    One of the <span id="important-span">most challenging</span> issues in the contemporary global scenario. <button id="btn-translate" onclick="translatePortuguese()"><span class="material-symbols-outlined">translate</span></button> 
                 </p>
             </div>
 
