--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         <footer class="home_footer">
             <div id="footer-links">
                 <a target="_blank" href="page_party.html" id="alunos">Alunos</a>
-                <a target="_blank" href="https://www.unifenas.br/" id="unifenas">Unifenas</a>
+                <a target="_blank" href="https://www.unifenas.br/computacaoalfenas.asp" id="unifenas">Unifenas</a>
                 <a target="_blank" href="referencias.html" id="referencias11">Referências</a>
             </div>
 
