atualização suave na responsividade mobile

--- a/index.html
+++ b/index.html
@@ -61,10 +61,7 @@
                     <a href="#home">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#Ambiental">Ambiental</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#Social">Social</a>
+                    <a href="#Impactos">Ambiental e Social</a>
                 </li>
                 <li class="nav-item">
                     <a href="#Lixo_Eletrônico">Eletrônicos</a>
@@ -73,17 +70,21 @@
                     <a href="#Outros">Outros</a>
                 </li>
             </ul>
-            <button class="btn-default">
-                <a href="form.html"><span class="material-symbols-outlined">account_circle</span> Login</a>
-            </button> <br>
 
-            <button class="btn-default" onclick="window.location.href='cadform.html'">
-                <span class="material-symbols-outlined">emoji_people</span> Cadastrar
-            </button> <br>
-
-            <button class="btn-default" onclick="window.location.href='pontos_re.html'">
-                <span class="material-symbols-outlined">cached</span> Pontos de Coleta
-            </button> <br>
+            <ul id="mobile_nav_list_btn">
+                <li><button class="btn-default">
+                        <a href="form.html"><span class="material-symbols-outlined">account_circle</span> Login</a>
+                    </button> 
+                </li>
+                <li><button class="btn-default" onclick="window.location.href='cadform.html'">
+                        <span class="material-symbols-outlined">emoji_people</span> Cadastrar
+                    </button> 
+                </li>
+                <li><button class="btn-default" onclick="window.location.href='pontos_re.html'">
+                        <span class="material-symbols-outlined">cached</span> Pontos de Coleta
+                    </button> 
+                </li>
+            </ul>
         </div>
     </header>
 
@@ -98,7 +99,9 @@
                 </h1>
 
                 <p class="description" id="translate">
-                    One of the <span id="important-span">most challenging</span> issues in the contemporary global scenario. <button id="btn-translate" onclick="translatePortuguese()"><span class="material-symbols-outlined">translate</span></button> 
+                    One of the <span id="important-span">most challenging</span> issues in the contemporary global
+                    scenario. <button id="btn-translate" onclick="translatePortuguese()"><span
+                            class="material-symbols-outlined">translate</span></button>
                 </p>
             </div>
 
@@ -303,17 +306,20 @@
                 <div class="impacts_amb_itens">
                     <ul>-> <span class="span_text">Lei 12.305/2010:</span></ul>
                     <li><span class="span_detail">
-                            Estabelece a Política Nacional de Resíduos Sólidos (PNRS) Inclui o lixo eletrônico no texto da PNRS, de 1998;
+                            Estabelece a Política Nacional de Resíduos Sólidos (PNRS) Inclui o lixo eletrônico no texto
+                            da PNRS, de 1998;
                         </span></li>
                     <li><span class="span_detail">Estabelece uma responsabilidade compartilhada pelo ciclo de vida do
                             produto.</span></li><br>
 
                     <ul>-> <span class="span_text">Resolução Conama 452/2012:</span></ul>
-                    <li><span class="span_detail">Estabelece critérios e procedimentos para o descarte de pilhas e baterias, incluindo aquelas
-                        presentes em dispositivos eletrônicos.</span></li><br>
+                    <li><span class="span_detail">Estabelece critérios e procedimentos para o descarte de pilhas e
+                            baterias, incluindo aquelas
+                            presentes em dispositivos eletrônicos.</span></li><br>
 
                     <ul>-> <span class="span_text">Decreto nº 10.240/2020:</span></ul>
-                    <li><span class="span_detail">Trata da logística reversa de produtos eletroeletrônicos.</span></li><br>
+                    <li><span class="span_detail">Trata da logística reversa de produtos eletroeletrônicos.</span></li>
+                    <br>
 
                     <ul>-> <span class="span_text">Decreto nº 10.936/2022:</span></ul>
                     <li><span class="span_detail">Regulamentou a Lei nº 12.305/2010.</span></li><br>
@@ -337,7 +343,7 @@
             <div id="footer-links">
                 <a target="_blank" href="page_party.html" id="alunos">Alunos</a>
                 <a target="_blank" href="https://www.unifenas.br/computacaoalfenas.asp" id="unifenas">Unifenas</a>
-                <a target="_blank" href="referencias.html" id="referencias11">Referências</a>
+                <a href="referencias.html" id="referencias11">Referências</a>
             </div>
 
             <div id="social-icons">
