--- a/index.html
+++ b/index.html
@@ -267,7 +267,8 @@
                     <h1> Classificação do Lixo Eletrônico</h1>
                 </div><br>
 
-                <div class="impacts_amb_itens"> <span class="span_detail">
+                <div class="impacts_amb_itens"> 
+                    <span class="span_detail">
                         <li>Celulares e Smartphones</li>
                         <li>Computadores e Notebooks</li>
                         <li>Baterias e Carregadores</li>
