--- a/pontos_re.html
+++ b/pontos_re.html
@@ -21,7 +21,7 @@
     <nav id="navbar">
       <a href="index.html"><i class="fa-solid fa-recycle" id="nav_logo"> Go!Recycle</i></a> <!--logo-->
       <button class="btn-loc" data-index="0">Prefeitura</button>
-      <button class="btn-loc" data-index="1">Alfenas Ambiental</button>
+      <button class="btn-loc" data-index="1">Ferro Velho do João</button>
       <button class="btn-loc" data-index="2">UNIFAL-MG</button>
       <button class="btn-loc" data-index="3">Vida Viva</button>
     </nav>
