--- a/page_party.html
+++ b/page_party.html
@@ -14,15 +14,16 @@
   </style>
 </head>
 
+<!-- LEMBRAR DE FAZER A RESPONSIVIDADE DESSA MERDA AQUI -->
 <body>
 
   <div class="vaporwave-grid"></div>
 
   <nav class="navbar">
-    <a href="index.html">
+    <a href="index.html" id="logo-party">
       <h1 class="titulo">Alunos Participantes</h1>
     </a>
-    <a class="joke1" onclick="trocarImagem()"><i id="joke">joke!</i></a>
+    <i id="joke"><a class="joke1" onclick="trocarImagem()">joke!</a></i>
   </nav>
 
   <main>
