--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <i class="fa-solid fa-recycle" id="nav_logo"> Go!Recycle</i> <!--logo-->
 
             <ul id="nav_list">
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a href="#home">Inicio</a>
                 </li>
                 <li class="nav-item">
@@ -88,7 +88,7 @@
         </div>
     </header>
 
-    <!--PAUSE BREAK opa-->
+    <!--PAUSE BREAK -->
 
     <main id="content">
         <section id="home">
